# ChangeLog for dev-ruby/ruby-filemagic
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-filemagic/ChangeLog,v 1.19 2014/05/21 01:28:00 mrueg Exp $

  21 May 2014; Manuel Rüger <mrueg@gentoo.org> -ruby-filemagic-0.5.0.ebuild,
  -ruby-filemagic-0.5.2.ebuild:
  Cleanup old.

*ruby-filemagic-0.6.0 (18 May 2014)

  18 May 2014; Hans de Graaff <graaff@gentoo.org> +ruby-filemagic-0.6.0.ebuild:
  Version bump.

*ruby-filemagic-0.5.2 (01 May 2014)

  01 May 2014; Hans de Graaff <graaff@gentoo.org> +ruby-filemagic-0.5.2.ebuild:
  Version bump.

  11 Mar 2014; Manuel Rüger <mrueg@gentoo.org> -ruby-filemagic-0.4.2.ebuild:
  Cleanup old.

*ruby-filemagic-0.5.0 (20 Dec 2013)

  20 Dec 2013; Hans de Graaff <graaff@gentoo.org> +ruby-filemagic-0.5.0.ebuild:
  Version bump. Add ruby20.

  05 Jul 2013; Hans de Graaff <graaff@gentoo.org> ruby-filemagic-0.4.2.ebuild:
  Add ruby19.

  14 Aug 2012; Diego E. Pettenò <flameeyes@gentoo.org> metadata.xml:
  Update metadata.xml so that it's the same as most other packages.

  14 Jul 2012; Hans de Graaff <graaff@gentoo.org> ruby-filemagic-0.4.2.ebuild:
  Restrict tests since test expectations no longer match what sys-apps/file
  outputs.

  16 Jan 2011; Hans de Graaff <graaff@gentoo.org>
  -ruby-filemagic-0.1.1.ebuild, -ruby-filemagic-0.1.1-r1.ebuild,
  -ruby-filemagic-0.2.2.ebuild:
  Remove old versions.

*ruby-filemagic-0.4.2 (19 Sep 2010)

  19 Sep 2010; Hans de Graaff <graaff@gentoo.org>
  +ruby-filemagic-0.4.2.ebuild:
  Version bump.

*ruby-filemagic-0.2.2 (08 Aug 2010)

  08 Aug 2010; Hans de Graaff <graaff@gentoo.org>
  +ruby-filemagic-0.2.2.ebuild:
  Version bump from new upstream. Switch to use the gem. Closes bug 262606.

*ruby-filemagic-0.1.1-r1 (03 Jul 2010)

  03 Jul 2010; Hans de Graaff <graaff@gentoo.org>
  +ruby-filemagic-0.1.1-r1.ebuild:
  Convert to ruby-ng.

  04 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  ruby-filemagic-0.1.1.ebuild: