@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST ruby-filemagic-0.6.0.gem 16384 SHA256 924b51e455e68362ce7fc064c2a0b1cb29315fe08a0ef745353ffed6dd05b5b6 SHA512 4a2a2817197e63bbd2fa43f39a3e0cc067bd24891ad89329496b99f3d67a3b3906632ffd7deebdebf5cc30bc7af7de713ed159253ef16a3cf2969185677ccf01 WHIRLPOOL fd49158a0ae6ce970c72a44f5fa42446a3c0bdca5e6726a5145a094ac1163d1710c54a93185cc07680171bb05765c05ebd986d78b0eb4e9404e5c70934174bb3
+DIST ruby-filemagic-0.6.1.gem 17920 SHA256 fd8a7d8a22333c0844650c323980924e534080f565fb96ad4ce05f32bde99266 SHA512 8dd36ba52c812e75d03e386a55f5cc701d67dc11bea08bbfe5bc0c5dcdd4daa18a8e46131ea6d0904bffcbef9e92c2389eee19cb5c407ed066eea4272935eaac WHIRLPOOL 7c823ff75dc97f026fc92f75ffbc763b5bda44602c040946d0f81ec050d1629057b9232bdea1f379cb29606687681d87abdc44efe9415040a590dddc90fcce53
 EBUILD ruby-filemagic-0.6.0.ebuild 1196 SHA256 296dbf381dba3ca8bb199c9d088392b2aa0bb39bf26746e60f2eac88692f4d40 SHA512 5a8e5496616a7add3dfda6577c8668f44bd1d0eadfc0ceafc5d6f4a04a88b947087de5ec2a9c0ef3d61ae74603837e1a1143883efcf305cd05c503ccc21ac21d WHIRLPOOL 8c73594e35026b491a52e68562e593737511b70a1be43c51409205cde0026622d526826c5ee837014d90ca091b5fa1c80af9f665b0953025980e4256ac620fa3
-MISC ChangeLog 2895 SHA256 02bcabccab686c20dd3c3bb3f9477a0c65a90ff4db3f13e25cf4189a27373cd0 SHA512 74b2ba7e04b0538e077f06d711ec65a785d77c84e373fd4024e0b30d30bb3acd77ca7c56fec8f7a6987d17a04aa89254101c6202ba137e6ee12d0b5dd7131d06 WHIRLPOOL 0e5273c3a9ea1f5d274c9de2330a54b451bddeb294575cf041a16760201c79949c51cdf48b34ad3105562934bd6363dad4ddb1faccbc84f89a2ac2c41da61e6a
+EBUILD ruby-filemagic-0.6.1.ebuild 1196 SHA256 81f0d0745faf90fe8c9c00358005fee620079bdc6a85ec5bd49af6b475b08230 SHA512 390390b8925eae90d986ea4fa666e8530889a3820a4cd48948b5850da30ac6af84058beacf06b73a9da133c3f400395a9eba34ce70be88f1dde45c645d156448 WHIRLPOOL ab0ebfb3e14a4c2eeafdf20e1a8b9d151f63d25a6443993d51888b96e6da03198e302e0f17a7d7279c88f5ce853e5b5cfa5a8dace37e453c64107d8a5c0b6e59
+MISC ChangeLog 3030 SHA256 b6355e78dbe4fabee3432f68dfea9b2458af0af561922cf676b0f455c1b60158 SHA512 1cd88acc585cf8dcdcf2672a42210dd3eb1bca560fa3dbe20ca50617bfd1c619b2063cf1529b9a9a0812000f75a7e75a2752baddc05668d264684d5a78148185 WHIRLPOOL 5a8966190dc31a929b284dff82bc60e5b8743fae3738d30bb4e25cf3b36f415deffb2af5611bf17b433cd30093ffa16c432dcf963fe417eea9209cdb72c6a1c2
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlP4LVYACgkQiIP6VqMIqNfk+QEAixPtbrVB0/kfpyr9EZ3nsXqS
+bAts5Umz4XMrcQLZ+ZMA/1ess8ek0pVk/mZaYYbw7BcMN2B7rc6er+t/DX+F7Lyg
+=MH2E
+-----END PGP SIGNATURE-----
